# sandsifter

./: .gitignore  Cargo.toml  Makefile  README.md  README.py.md  injector.c  sifter.py  summarize.py
disas/: capstone_32.py  capstone_64.py
gui/: gui.py
pyutil/: colors.py  progress.py
src/: injector_abi.rs  injector_rs.rs  lib.rs
src/utils/: arch.rs  eslinux.rs  mod.rs  privilege.rs
