[package]
name = "sandsifter"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sifter"
path = "src/bin/sifter.rs"

[[bin]]
name = "summarize"
path = "src/bin/summarize.rs"

[[bin]]
name = "injector"
path = "src/bin/injector.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
capstone = "0.14"
capstone-sys = "0.18"
ratatui = "0.30"
crossterm = "0.29"
hex = "0.4"
libc = "0.2"
nix = { version = "0.31", features = ["process", "signal"] }
rand = "0.10"
chrono = "0.4"
indicatif = "0.18.4"
numfmt = "1.2.0"
getopts = "0.2"
